# Ebe

./: .env.example  .gitignore  README.md  compose.yaml
apps/api/: pyproject.toml
apps/api/app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
apps/api/app/routers/: embeddings.py  events.py  health.py  people.py  places.py  query.py  relationships.py  remember.py  search.py  stones.py
apps/api/app/serializers/: memory_stones.py
apps/api/app/services/: embeddings.py  extraction.py  graph_recall.py  identity.py  memory_creation.py  memory_duplicates.py  memory_review.py  memory_stone_connections.py  memory_stone_transport.py  memory_stones.py  query_service.py  relationships.py  review_resolution.py  search.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0bf709c1a2fd_add_embedding_source_hash.py  0e10f7252648_add_memory_stone_embeddings.py  3973a4915651_add_person_aliases.py  6b3af51e70c0_add_memory_stone_provenance_fields.py  92d583f8b0da_add_people_and_memory_relationships.py  9792bfcf6104_create_memory_stones_table.py  (+3 more)
apps/api/scripts/: project_snapshot.sh
apps/api/tests/: conftest.py  test_embeddings.py  test_entity_resolver.py  test_extraction.py  test_graph_recall.py  test_health.py  test_memory_review.py  test_memory_stone_serialization.py  test_people.py  test_person_aliases.py  test_places_events.py  test_query.py  test_query_planner.py  test_query_retrieval_integration.py  test_remember.py  test_retrieval.py  test_retrieval_ordering.py  test_review_resolution.py  test_search_ranking.py  test_stones.py
(+28 files in other folders)
